--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <a href="">Merito</a>
             <a href="">Contacto</a>
             <section>
-                <h1>Kiwar Kurikamak</h1>
+                
                 <h1>Tiche Aguagallo</h1>
+                <h1>Kiwar Kurikamak</h1>
+                <p>Mi nombre es kiwar Tiche estudio en la UTA</p>
             </section>
         </menu>
     </div>
